# ComputerVision-C

./: README.md
2D_Transformation/: CMakeLists.txt  Readme.md  main.cpp  rotate.h  scale.h  transformation.h  translate.h  warp.h
3D_Transformation/: CMakeLists.txt  Readme.md  func.h  main.cpp
Building_Opencv/: Readme.md
Cmake/: CMakeLists.txt  Makefile  Readme.md  func.h  main.cpp
Color_Space/: CMakeLists.txt  Readme.md  color_func.h  main.cpp
Image_Edge_Detection/: Readme.md  func.h  main.cpp
Line_Detection/: Readme.md  func.h  main.cpp
